[package]
name = "ux-indicators"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-indicators"
repository = "https://github.com/angular-rust/ux-indicators"
documentation = "https://docs.rs/ux-indicators"
description = "Technical Analysis Function Library"
keywords = ["technical-analysis", "financial-analysis"]
categories = ["mathematics", "science"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "indicators"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
error-chain = "0.12"
ux-primitives = "0.1"

rust_decimal = "1.7"
rust_decimal_macros = "1.7"

[dev-dependencies]

assert_approx_eq = "1.1"
csv = "1.1"
bencher = "0.1"
rand = "0.7"
json = "0.12"
lazy_static = "1.4"
rspec = "0.1"
# cucumber = { package = "cucumber_rust", version = "^0.6.0" } 
cucumber_rust = "0.6" 
# cucumber = "0.3.1"


[[bench]]
name = "indicators"
path = "benches/indicators.rs"
harness = false